# CT-key

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  sim.py  soc.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  lint.yaml  tests.yaml
aes_test/: Makefile  README.md  linker.ld  main.c  soc.py
aes_test/include/: aes.h
aes_test/src/: aes.c
core_package/: pyproject.toml
core_package/src/cores/aes/: .gitattributes  .gitignore  LICENSE  README.md
core_package/src/cores/aes/.github/workflows/: ci.yml
core_package/src/cores/aes/data/: sky130.tcl
core_package/src/cores/aes/src/model/python/: aes.py  aes_key_gen.py  rcon.py
core_package/src/cores/aes/toolruns/: Makefile
cores/: aes.py  timer.py
ctkey_package/: LICENSE  MANIFEST.in  README.md  pyproject.toml
ctkey_package/src/ctkey/cores/: aes.py  timer.py
ctkey_package/src/ctkey/cores/timer/: timer.v  timer_core.v
ctkey_package/src/ctkey/targets/: ctkey_oc.py  ctkey_ulx3s.py
demo/: Makefile  crt0.d  firmware.elf  main.c  main.d  timer.c  timer.h
soc_package/: pyproject.toml
soc_package/src/targets/: ctkey_ulx3s.py
